--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     volumes:
       - progresDB:/var/lib/postgresql/data
     env_file:
-      - ./app.env
+      - .env
 volumes:
   progresDB:
