Add Redis connection and add GetPosts endpoint

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ POSTGRES_PORT=6500
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=password123
 POSTGRES_DB=golang_postgres
-
-ORIGIN=http://localhost:3000
+REIDS_URI=localhost:6379
+REIDS_PASSWORD=password123
